--- a/calstyle.css
+++ b/calstyle.css
@@ -28,7 +28,7 @@
 .weekdays {
 
   padding: 16px;
-  background: white;
+  background: rgb(226, 145, 145);
   border-radius: 24px;
   display: flex;
   width: 91%;
@@ -61,7 +61,7 @@
   width: -30px;
 
 
-  background: whitesmoke;
+  background: rgb(226, 165, 165);
   opacity: 0.7;
   color: black;
   height: 110px;
