--- a/planstyle.css
+++ b/planstyle.css
@@ -16,7 +16,7 @@ body {
     text-align: center;
 }
 .plan {
-  background: white;
+  background: cyan;
   padding: 50px;
   color: rgba(23, 28, 40, 255);
   font-family: "Inter", sans-serif;
