--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,7 @@
 *::after,
 *::before {
   margin: 0;
-  padding: 0;
+  padding: 1px;
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
